# kepler

./: .envrc.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: checks.yml
config/: models.yaml
docker/: Dockerfile  Dockerfile.llama
docker/llama/: Dockerfile
inference_engine_samples/: llamacpp_sample.py  readme.txt  vllm_sample.py
model_inference/: readme.txt  vllm_test.py
models/: readme.md  readme.txt
notes/: notes.txt
perf/: 2026-01-04_local_qwen2_5-0_5b-instruct-q5_k_m_llama_server_text-only.json  2026-01-05_local_qwen2_5-0_5b-instruct-q5_k_m_llama_server_text-only.json  2026-01-06_local_qwen2_5-0_5b-instruct-q5_k_m_llama_server_text-only.json  2026-01-09_local_qwen2_5-0_5b-instruct-q5_k_m_llama_server_text-only.json  readme.txt
utilities/: benchmark.py  common.py  docker_manager.py  model_selector.py  progress_tracker.py  run_bench.py  workbench.py
