[project]
name = "kepler"
version = "0.1.0"
description = "Production-grade LLM benchmarking framework for local inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "llama-cpp-python>=0.3.16",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "numpy<=2.2",
]
